# ProjetOpenGL

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  vcpkg.json
assets/shaders/: phong.frag  phong.vert  skybox.frag  skybox.vert
src/: Camera.cpp  Camera.hpp  ObjModel.cpp  ObjModel.hpp  Shader.cpp  Shader.hpp  Skybox.cpp  Skybox.hpp  main.cpp
